--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230311132822">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230311190650">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -68,7 +68,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="main-section__advantages advantages">
+
+				</div>
+				<div class="main-section__advantages advantages">
+					<div class="advantages__container">
 						<div class="advantages__row">
 							<div class="advantages__item">
 								<div class="advantages__body">
@@ -81,7 +84,7 @@
 									<div class="advantages__num">#1</div>
 								</div>
 								<div class="advantages__trinagle">
-									<img src="img/icons/trinagle-dark.svg" alt="trinagle">
+									<img src="img/icons/trinagle.svg" alt="trinagle">
 								</div>
 							</div>
 							<div class="advantages__item">
@@ -95,7 +98,7 @@
 									<div class="advantages__num">#2</div>
 								</div>
 								<div class="advantages__trinagle">
-									<img src="img/icons/trinagle-dark.svg" alt="trinagle">
+									<img src="img/icons/trinagle.svg" alt="trinagle">
 								</div>
 							</div>
 							<div class="advantages__item">
@@ -109,7 +112,7 @@
 									<div class="advantages__num">#3</div>
 								</div>
 								<div class="advantages__trinagle">
-									<img src="img/icons/trinagle-dark.svg" alt="trinagle">
+									<img src="img/icons/trinagle.svg" alt="trinagle">
 								</div>
 							</div>
 							<div class="advantages__item">
@@ -123,7 +126,7 @@
 									<div class="advantages__num">#4</div>
 								</div>
 								<div class="advantages__trinagle">
-									<img src="img/icons/trinagle-dark.svg" alt="trinagle">
+									<img src="img/icons/trinagle.svg" alt="trinagle">
 								</div>
 							</div>
 							<div class="advantages__item">
@@ -137,7 +140,7 @@
 									<div class="advantages__num">#5</div>
 								</div>
 								<div class="advantages__trinagle">
-									<img src="img/icons/trinagle-dark.svg" alt="trinagle">
+									<img src="img/icons/trinagle.svg" alt="trinagle">
 								</div>
 							</div>
 						</div>
@@ -324,7 +327,7 @@
 	</div>
 
 
-	<script src="js/app.min.js?_v=20230311132822"></script>
+	<script src="js/app.min.js?_v=20230311190650"></script>
 </body>
 
 </html>
